<resources>
    <string name="copyright">Copyright @ Perfect Scan 2018-2019</string>
    <string name="buy1domate">R$ 4,99/Mês</string>
    <string name="buy2domate">R$ 4,99</string>
    <string name="buy3domate">R$ 19,99</string>
    <string name="buy4domate">R$ 39,99</string>
    <string name="app_name">Perfect Scan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_scan">Escanear</string>
    <string name="menu_scan_image">Escanear imagem</string>
    <string name="menu_maker">Criar códigos</string>
    <string name="menu_historical">Históricos</string>
    <string name="menu_share">Compartilhar app</string>
    <string name="menu_send">Suporte</string>
    <string name="info">Informações</string>
    <string name="menu_about">Sobre o app</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_rate">Classificar app</string>
    <string name="perfect_desc">Códigos de barras</string>
    <string name="action_update">Buscar arquivo</string>
    <string name="code">Digite aqui...</string>
    <string name="wifinamekey">Nome da rede</string>
    <string name="wifikey">Senha</string>
    <string name="error_wifi_name">Digite o nome da rede WI-FI</string>
    <string name="error_wifi_key">Digite a senha da rede:</string>
    <string name="error_wifi_key_minimun">A senha precisa conter pelo menos 8 caracteres</string>
    <string name="error_code">Digite seu código!</string>
    <string name="error_code_input_code">Entre com o código</string>
    <string name="error_code_input_wifi">Dados do WI-FI</string>
    <string name="error_code_genered_error">Obs... Algo deu errado... Uso de caracteres, letras, símbolos ou dígitos incorreto!</string>
    <string name="error_code_genered_error_passcheckup">Os conteúdos não passam soma de verificação</string>
    <string name="error_code_genered_error_78">O conteúdo deve conter 7 dígitos (sem dígitos de soma de verificação) ou 8 dígitos longos, mais você digitou:</string>
    <string name="error_code_genered_error_1213">O conteúdo deve conter 12 dígitos (sem dígitos de soma de verificação) ou 13 dígitos longos, mais você digitou</string>
    <string name="error_code_genered_error2">O comprimento da entrada deve ser o mesmo</string>
    <string name="error_code_genered_error_3">Os conteúdos não passam soma de verificação</string>
    <string name="error_code_input_email">Endereço do E-Mail</string>
    <string name="title_permission">Permissões</string>
    <string name="msg_permission">Precisamos de permissão!</string>
    <string name="btn_yes_permission">Permitir</string>
    <string name="btn_not_permission">Não permitir</string>
    <string name="aztec">Código AZTEC</string>
    <string name="barcode">Código de barras</string>
    <string name="code128">Código 128</string>
    <string name="code39">Código 39</string>
    <string name="code93">Código 93</string>
    <string name="data_matrix">Código Data Matrix</string>
    <string name="ean_13">Código EAN 13</string>
    <string name="ean_8">Código EAN 8</string>
    <string name="itf">Código ITF</string>
    <string name="pdf">Código PDF 417</string>
    <string name="qr">Código QR</string>
    <string name="upc_e">Código UPC  E</string>
    <string name="upc_a">Código UPC A</string>
    <string name="mail">E-Mail</string>
    <string name="sms">SMS</string>
    <string name="product">Produto</string>
    <string name="text">Texto</string>
    <string name="phone">Telefone</string>
    <string name="app">Aplicativo</string>
    <string name="copy">Copiado!</string>
    <string name="arquivos">Arquivos</string>
    <string name="arquivos_of_png">Imagem</string>
    <string name="save">Salvo!</string>
    <string name="not_app">O aplicativo não esta instalado no aparelho ou foi desativado, instale... e tente novamente!</string>
    <string name="navegador">Navegador</string>
    <string name="wifi_conect">Conectar</string>
    <string name="wifi_add">Adicionar rede</string>
    <string name="web_find">Buscar na web</string>
    <string name="app_notes">Editar no Perfect Notes</string>
    <string name="savetxt">Arquivo de texto</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="add_condact">Adicionar contato</string>
    <string name="find_store">Buscar na loja</string>
    <string name="discar">Discar</string>
    <string name="ligar">Ligar</string>
    <string name="send_email">Enviar E-Mail</string>
    <string name="savepng">Imagem PNG</string>
    <string name="copy_code">Copia</string>
    <string name="share">Compartilhar...</string>
    <string name="upfile">Abrir arquivo</string>
    <string name="error_code_input_phone">Entre com o número</string>
    <string name="wifi_type">Tipo:</string>
    <string name="wifi_senha">Senha:</string>
    <string name="wifi_ssd">SSID:</string>
    <string name="wifi_open">Aberta</string>
    <string name="number">Número:</string>
    <string name="desti">Destinatário:</string>
    <string name="msg">Mensagem:</string>
    <string name="menu_han_home">Inicial</string>
    <string name="menu_han_scan">Fazer scan</string>
    <string name="menu_han_imagem_scan">Escanear imagem</string>
    <string name="menu_han_code_maker">Criar códigos</string>
    <string name="menu_han_historical">Históricos</string>
    <string name="menu_sobre">Sobre o app</string>
    <string name="digitalizar">Digitalizar</string>
    <string name="desc_scan_image">Selecione uma imagem da sua galeria ou capture uma fotografia.</string>
    <string name="scanned">Escaneados</string>
    <string name="created">Criados</string>
    <string name="clear">Limpar</string>
    <string name="ordem">Ordenar</string>
    <string name="editor_historical">Editor</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="salvar_btn">Salvar</string>
    <string name="delete_historical">Apagar</string>
    <string name="edit_historical">Editar titulo</string>
    <string name="name_a_z">Ordem Alfabética A-Z</string>
    <string name="name_z_a">Ordem Alfabética Z-A</string>
    <string name="date_nova">Mais novo</string>
    <string name="data_antiga">Mais antiga</string>
    <string name="by_type">Por tipo</string>
    <string name="by_type_barcode">Tipo de código</string>
    <string name="noting">Nada para axibir!</string>
    <string name="delte_message">Deseja realmente apagar todo o seu histórico?</string>
    <string name="list_clear">Lista vazia!</string>
    <string name="scan_massa">Salvar e guarda</string>
    <string name="invert_colro">O modo de leitura por códigos brancos em fundos preto está:</string>
    <string name="on">Ativado</string>
    <string name="off">Desativado</string>
    <string name="massa">O modo contínuo está:</string>
    <string name="msg_massa">Guardado!</string>
    <string name="send_mms">Enviar MMS</string>
    <string name="ola">Olá</string>
    <string name="error_scan">Não conseguimos decodificar o código, tente novamente!</string>
    <string name="share_error">Ocorreu um erro ao tentar compartilhar!</string>
    <string name="permision_camera">Precisamos de sua permissão para usar a câmera!</string>
    <string name="negar_btn">Não permitir</string>
    <string name="permitir_btn">Permitir</string>
    <string name="permision">Permissão</string>
    <string name="resenha">Este aplicativo permite os usuários escanear inúmeros códigos de barras além de cria-los você pode compartilhar com seus amigos.</string>
    <string name="infOaboutappresumo">Novidades:\nVersão: 5.0\n\n* Escanear, digitalizar imagens e gerar Códigos.\nDigitalize imagens capturadas na hora ou da galeria.\n* Utilize a câmera para escanear códigos de barras.\n* Gere 12 tipos diferentes de códigos de barras.\n* Copie ou compartilhe os resultados em texto ou imagem .png\n* Leitor de resultados em voz alta.\n* Salve tudo em históricos, em categorias diferentes;\n* Reconhecimentos de códigos: redes sócias, WhatsApp, SMS, números de telefone, e-mail, produtos e WI-FI.\n* Fazer ligações, abrir no teclado os números dos resultados.\n* Enviar mensagens nas redes sócias, SMS e WhatsApp.\n* Buscar produtos direto no Google.\n* Suporte as códigos 1D e 2D\n* Adicionado suporte a: Código AZTEC, Código CODABAR, Código 128, Código 39, Código 93, Código EAN 13, Código EAN 8, Código ITF, Código PDF 417, Código QR, Código UPC E, Código UPC A.</string>
    <string name="version">Versão:</string>
    <string name="share_menu">Compartilhar</string>
    <string name="connect">Conectando...</string>
    <string name="salved_wifi">WI-FI Salvo!</string>
    <string name="laser_blue_bright">Azul Brilhante</string>
    <string name="laser_blue_dark">Azul Escuro</string>
    <string name="laser_blue_light">Azul Claro</string>
    <string name="laser_green_dark">Verde Escuro</string>
    <string name="laser_green_light">Verde Claro</string>
    <string name="laser_orange_dark">Laranja Escuro</string>
    <string name="laser_orange_light">Laranja Claro</string>
    <string name="laser_purple">Roxo</string>
    <string name="laser_red_dark">Vermelho Escuro</string>
    <string name="laser_red_light">Vermelho Claro</string>
    <string name="laser_default">Padrão</string>
    <string name="principal_settings">Principal</string>
    <string name="continuos_mode">Modo contínuo</string>
    <string name="invert_mode">Modo inverter</string>
    <string name="invert_summary">Permite escanear códigos brancos em fundos preto</string>
    <string name="detect_settings">Ao detectar o código</string>
    <string name="beep_mode">Apitar</string>
    <string name="vibrar_mode">Vibrar</string>
    <string name="locutor_result_in_view_mode">Narrar resultado ao escanear</string>
    <string name="locutor_result_in_view_mode_sumarry">Permite ler os resultados em voz alta</string>
    <string name="locutor_result_mode">Narrar em modo contínuo</string>
    <string name="locutor_result_sumarry">Permite narrar o tipo de cada código escaneado em contínuo</string>
    <string name="save_creeated_mode">Salvar códigos criados</string>
    <string name="save_scanned_mode">Salvar códigos escaneados</string>
    <string name="outros_setings">Extras</string>
    <string name="laser_color">Cor do laser do scan</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="focus_mode">Foco automático</string>
    <string name="saveas">Salvar como...</string>
    <string name="image_share">Imagem do código</string>
    <string name="text_share">Resultado do código</string>
    <string name="printing">Imprimir resultado</string>
    <string name="google_produts">Google Produtos</string>
    <string name="licenca_1">Este aplicativo foi desenvolvido em base do trabalho da zxing library licenciada pela Apache License v2.0.\nCódigo Qr é uma marca registrada da DENSO WAVE INCORPORATED.</string>
    <string name="privacy">Politica de privacidade</string>
    <string name="option">Queremos melhorar com sua opnião!</string>
    <string name="outros_for_donate">Outros</string>
    <string name="rattings_app">Qual sua opinião sobre este app?</string>
    <string name="problem_app">Poderia relatar algum problema?</string>
    <string name="recurso_app">Gostaria de um novo recurso?</string>
    <string name="bug_app">Encontrou algum bug?</string>
    <string name="translate_app">Traduzir para o seu idioma!</string>
    <string name="help_app">Central de ajuda</string>
    <string name="moreapps">Mais aplicativos</string>
    <string name="menu_buy">Compra app/Doar</string>
    <string name="talking">Fale conosco</string>
    <string name="translateformy">Traduzir</string>
</resources>